--- a/app/src/main/res/layout/content_activity.xml
+++ b/app/src/main/res/layout/content_activity.xml
@@ -70,7 +70,8 @@
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+        android:elevation="2dp"/>
 
     <Button
         android:id="@+id/buttonVoltar"
