--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="botaoEscuro">#00ACC1</color>
     <color name="botaoClaro">#03DAC5</color>
+    <color name="textoQuestoes">#000000</color>
+    <color name="respostaErrada">#EF5350</color>
 
 </resources>
