--- a/app/src/main/res/layout/content_activity.xml
+++ b/app/src/main/res/layout/content_activity.xml
@@ -9,9 +9,11 @@
 
     <TextView
         android:id="@+id/textTitulo"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="24dp"
         android:text="@string/titulo"
         android:textSize="18sp"
         android:textStyle="bold"
