--- a/app/src/main/res/layout/content_activity.xml
+++ b/app/src/main/res/layout/content_activity.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="24dp"
         android:text="@string/titulo"
         android:textSize="18sp"
@@ -25,7 +25,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="16dp"
         android:paddingStart="15dp"
         android:paddingTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,15 +70,15 @@
         android:id="@+id/buttonResponder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="75dp"
         android:background="@drawable/degrade_fundo"
+        android:elevation="2dp"
         android:text="@string/responder"
-        android:textSize="15sp"
         android:textColor="@android:color/white"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        android:elevation="2dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <TextView
         android:id="@+id/Cronometro"
